<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="leo.me.la.finroute.getRoutes.GetRoutesActivity">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:statusBarBackground="@color/primary_dark">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:navigationIcon="@drawable/ic_controls">

                    <include layout="@layout/search_bar" />
                </android.support.v7.widget.Toolbar>

                <include layout="@layout/date_time_picker" />

            </android.support.design.widget.AppBarLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/buttonBar"
                android:layout_below="@+id/appbar">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rcvResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/mp_small"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_route" />

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:visibility="gone" />

                <RelativeLayout
                    android:id="@+id/annouce"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/mp_normal"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/mp_normal">

                    <ImageView
                        android:id="@+id/imgAnnounce"
                        android:layout_width="@dimen/normal_img_size"
                        android:layout_height="@dimen/normal_img_size"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_search"
                        tools:ignore="ContentDescription" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/imgAnnounce">

                        <TextView
                            android:id="@+id/tvAnnounce"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/mp_normal"
                            android:layout_marginRight="@dimen/mp_normal"
                            android:text="@string/search_itineraries"
                            android:textColor="@color/accent"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvSubAnnouce"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tvAnnounce"
                            android:layout_marginLeft="@dimen/mp_normal"
                            android:layout_marginTop="@dimen/mp_x_small"
                            android:textColor="@color/secondary_text"
                            android:textSize="@dimen/small_text_size"
                            android:visibility="gone" />
                    </RelativeLayout>
                </RelativeLayout>
            </FrameLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/buttonBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true">

                <LinearLayout
                    style="@style/Base.Widget.AppCompat.ButtonBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btnEarlier"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/ic_earlier"
                        android:drawablePadding="@dimen/mp_normal"
                        android:gravity="start|center_vertical"
                        android:text="@string/earlier"
                        android:textAllCaps="false"
                        android:textColor="@color/accent" />

                    <Button
                        android:id="@+id/btnNow"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_now"
                        android:minHeight="0dp"
                        android:minWidth="0dp"
                        android:padding="@dimen/mp_small"
                        android:text="@string/now"
                        android:textColor="@color/primary_dark"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/btnLater"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="@dimen/mp_normal"
                        android:drawableRight="@drawable/ic_later"
                        android:gravity="end|center_vertical"
                        android:text="@string/later"
                        android:textAllCaps="false"
                        android:textColor="@color/accent" />

                    <ImageButton
                        android:id="@+id/btnAlert"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/mp_small"
                        android:background="@drawable/ic_alert"
                        tools:ignore="ContentDescription" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>

    <include layout="@layout/navigation_view" />

</android.support.v4.widget.DrawerLayout>
